charts/sish/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sish-http
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: sish-ssh
  annotations:
    lbipam.cilium.io/ips: 192.168.1.202
spec:
  type: LoadBalancer
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
